# Copyright (c) 2020 Bubble, Inc.  All rights reserved. For personal (non-commercial) use, see license: https://bubblev.com/bubble-license/
[package]
name = "bubble-flexrouter"
version = "0.1.0"
authors = ["Jonathan Cobb <jonathan@getbubblenow.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
futures-core = { version = "0.3", default-features = false }
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false }
http = "0.2.1"
hyper = "0.13.7"
lru = "0.6.0"
os_info = { version = "2.0.8", default-features = false }
pnet = "0.26.0"
tokio = { version = "0.2.22", features = ["full"] }
trust-dns-resolver = "0.19.5"

[profile.release]
panic = 'abort'
