# Copyright (c) 2020 Bubble, Inc.  All rights reserved. For personal (non-commercial) use, see license: https://getbubblenow.com/bubble-license/
[package]
name = "bubble-flexrouter"
version = "1.1.0"
authors = ["Jonathan Cobb <jonathan@getbubblenow.com>"]
edition = "2018"

[dependencies]
bcrypt = "0.6.3"
clap = "2.33.0"
futures = "0.3.5"
futures-core = { version = "0.3", default-features = false }
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false }
hex = "0.4.2"
http = "0.2.1"
hyper = { version = "0.13.7", features = ["stream"] }
hyper-tls = "0.4.3"
log = "0.4.11"
lru = "0.6.0"
rand = "0.7.3"
reqwest = { version = "0.10.8", features = ["json"] }
serde = "1.0.115"
serde_derive = "1.0.115"
serde_json = "1.0.57"
sha2 = "0.9.1"
stderrlog = "0.4.3"
tokio = { version = "0.2.22", features = ["full"] }
tower = "0.3.1"
trust-dns-resolver = { version = "0.19.5", features = ["dns-over-rustls"] }
warp = "0.2.5"
whoami = "0.9.0"

[profile.release]
panic = 'abort'
